[gd_scene load_steps=4 format=3 uid="uid://dgj4dyxppp6dh"]

[ext_resource type="Script" uid="uid://cmxysjw60vdqk" path="res://target.gd" id="1_e1yvt"]
[ext_resource type="Texture2D" uid="uid://c4t4mvslc6xqn" path="res://Cursor.png" id="1_t2jmu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t2jmu"]
radius = 79.0759

[node name="Target" type="Node2D"]
script = ExtResource("1_e1yvt")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.316964, 0.624572, 0, 1)
scale = Vector2(2.45313, 2.45313)
texture = ExtResource("1_t2jmu")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_t2jmu")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
